2000-03-31  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/NSFont.h: Conform to NSCopying.
	* Source/NSFont.m ([NSFont -copyWithZone:]): Implement.

2000-03-31  Jonathan Gapen  <jagapen@whitewater.chem.wisc.edu>

	* Model/GMAppKit.m: Re-organize NSCell's [-initWithModelUnarchiver:]
	to unarchive each cell type appropriately.  Changed NSPanel 
	[+createObjectForModelUnarchiver:] so that it correctly creates
	an object for NSPanel subclasses.

2000-03-27  Adam Fedor  <fedor@gnu.org>

	* Changes to use "helper" class for getting backend
	font information rather than poseAs classes.
	* Headers/gnustep/gui/NSFont.h: New ivar.
	* Headers/gnustep/gui/NSFontManager.h: New ivar.
	* Source/NSFont.m: Changes to use GSFontInfo classes for
	getting font information.
	* Source/NSFontManager.m: Likewise for GSFontEnumerator.
	* Source/GSFontInfo.m: New file.

2000-03-27  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTableView.m ([-tile]): Access ivar _frame.

2000-03-25  Jonathan Gapen <jagapen@whitewater.chem.wisc.edu>

	* Headers/gnustep/gui/NSColorPicker.h: Added ivar.
	* Headers/gnustep/gui/NSImage.h: Added setFlipped/isFlipped methods.
	* Source/NSBundleAdditions.m: Fixed bug in checking filename
	extension. ([-pathForImageResource:])
	* Source/NSColorPicker.m: Implement. ([-initWithPickerMask:colorPanel:]
	[-colorPanel] [-insertNewButtonImage:in:] [-provideNewButtonImage:])
	* Source/NSImage.m: Initialize _flags.flipDraw in [-initWithSize:]

2000-03-24  Jonathan Gapen <jagapen@whitewater.chem.wisc.edu>

	* Source/NSFileWrapper.m: First implementation of NSFileWrapper
	* Headers/gnustep/gui/NSFileWrapper.h: Added ivars and enum

2000-03-21 22:00 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSText.m: Changed to use a text storage instead of an
	attributed string.
	* Source/NSTextStorage.m: Removed unnecessary method, changes
	of the delegate now don't trigger processEditing
	* Source/GSTextStorage.m: The two basic operations call
	([-edited:range:changeInLength:])
